--- a/tempelate/about.html
+++ b/tempelate/about.html
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
                 <li><i class="fa-solid fa-basket-shopping"></i><a href="#">Basket</a></li>
-                <li><i class="fa-regular fa-address-card"></i><a href="about.html">About</a></li>
+                <li><i class="fa-regular fa-address-card"></i><a href="about.html" class="blue">About</a></li>
             </ul>
         </div>
     </nav>
