--- a/tempelate/bascet.html
+++ b/tempelate/bascet.html
@@ -27,7 +27,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><i class="fa-solid fa-basket-shopping"></i><a href="bascet.html">Basket</a></li>
+                <li><i class="fa-solid fa-basket-shopping"></i><a href="bascet.html" class="blue">Basket</a></li>
                 <li><i class="fa-regular fa-address-card"></i><a href="about.html">About</a></li>
             </ul>
         </div>
