--- a/tempelate/ice-cream.html
+++ b/tempelate/ice-cream.html
@@ -20,7 +20,7 @@
                         class="fa-solid fa-caret-up up"></i>
                     <ul type="none" class="product_li_ul">
                         <li><i class="fa-solid fa-ice-cream"></i><a href="tempelate/ice-cream.html"
-                                style="color: white;">Ice-cream</a></li>
+                                style="color: white;" class="blue">Ice-cream</a></li>
                         <li><i class="fas fa-cookie"></i><a href="chocolate.html" style="color: white;">Chocalete</a></li>
                         <li><i class="fa-solid fa-bottle-water"></i><a href="drink.html" style="color: white;">Drink</a></li>
                     </ul>
