--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="menu" id="menu">
                 <ul type="none">
-                    <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa-solid fa-house"></i><a href="index.html" class="blue">Home</a></li>
                     <li><i class="fa-solid fa-bowl-rice"></i><a href="tempelate/chocolate.html">Product</a></li>
                     <li><i class="fa-solid fa-basket-shopping"></i><a href="tempelate/bascet.html">Basket</a></li>
                     <li><i class="fa-regular fa-address-card"></i><a href="tempelate/about.html">About</a></li>
@@ -26,7 +26,7 @@
             </div>
             <img src="media/logo.png" alt="logo" class="logo">
             <ul type="none" id="display_menu_child_ul">
-                <li class="home_li"> <i class="fa-solid fa-house"></i><a href="menu.html">Home</a></li>
+                <li class="home_li"> <i class="fa-solid fa-house"></i><a href="menu.html" class="blue">Home</a></li>
                 <li class="product_li"><i class="fa-solid fa-bowl-rice"></i><a href="#">Product </a> <i
                         class="fa-solid fa-caret-up up"></i>
                     <ul type="none" class="product_li_ul">
