--- a/tempelate/drink.html
+++ b/tempelate/drink.html
@@ -21,7 +21,7 @@
                     <ul type="none" class="product_li_ul">
                         <li><i class="fa-solid fa-ice-cream"></i><a href="ice-cream.html" style="color: white;">Ice-cream</a></li>
                         <li><i class="fas fa-cookie"></i><a href="chocolate.html" style="color: white;">Chocalete</a></li>
-                        <li><i class="fa-solid fa-bottle-water"></i><a href="drink.html" style="color: white;">Drink</a></li>
+                        <li><i class="fa-solid fa-bottle-water"></i><a href="drink.html" style="color: white;" class="blue">Drink</a></li>
                     </ul>
                 </li>
                 <li><i class="fa-solid fa-basket-shopping"></i><a href="#">Basket</a></li>
